SET_COMPONENT_NAMES ( ImageViewer )

SET ( BUILD TRUE )
REQUIRE_OPTION( BUILD EXE ${APP_NAME} OFF )
SET ( NOT_OS_WIN NOT OS_WIN )
REQUIRE_VAR( BUILD EXE ${APP_NAME} NOT_OS_WIN "Windows OS is not supported" )
INCLUDE (${ORCA_CMAKE_DIR}/FindOpenCV.cmake)
REQUIRE_VAR( BUILD EXE ${APP_NAME} OPENCV_FOUND "OpenCV not found" )

SET( DEP_LIBS OrcaImage )
REQUIRE_TARGETS( BUILD EXE ${APP_NAME} ${DEP_LIBS} )

IF ( BUILD )

    INCLUDE( ${ORCA_CMAKE_DIR}/UseComponentRules.cmake )
    INCLUDE( ${ORCA_CMAKE_DIR}/UseOpenCV.cmake )
    # need this for an ugly #ifdef in libOrcaImage
    ADD_DEFINITIONS( -DOPENCV_FOUND )

    FILE( GLOB COMP_SRCS *.cpp )
    
    # build stand-alone component  
    WRAP_MAINTHREAD_INTO_APP( ${APP_NAME} ${APP_CTRLC_HANDLER} ${COMP_NAMESPACE} ${COMP_NAME} ${COMP_SRCS} )
    TARGET_LINK_LIBRARIES( ${APP_NAME} ${DEP_LIBS} )
    
    # build IceBox service
    IF ( BUILD_SERVICES )
        WRAP_MAINTHREAD_INTO_SERVICE( ${SERVICE_NAME} ${COMP_NAMESPACE} ${COMP_NAME} ${COMP_SRCS} )
        TARGET_LINK_LIBRARIES( ${SERVICE_NAME} ${DEP_LIBS} )    
    ENDIF ( BUILD_SERVICES )

    GENERATE_CONFIG_FILE( ${APP_NAME}.def )

ENDIF ( BUILD )
